--- a/assets/sass/blocks/_footer.sass
+++ b/assets/sass/blocks/_footer.sass
@@ -1,6 +1,7 @@
 .footer
     background: $slate100
     padding: 24px 0
+    margin-top: 50px
     &__top
         display: flex
         align-items: center
