--- a/assets/sass/base/_elements.sass
+++ b/assets/sass/base/_elements.sass
@@ -111,17 +111,28 @@ h6
     ol, ul 
         margin: 24px 0px
         padding-left: 1em
+        &.ul-images
+            padding: 0 !important
+            list-style-type: none
+            & > li 
+                display: flex
+                align-items: flex-start
+                gap: 8px
+                margin-bottom: 8px
+                &:last-child
+                    margin-bottom: 0 !important
+                img 
+                    width: 24px
+                    min-width: 24px
+                    margin: 0 !important
     a 
         text-decoration: underline
-.default-text.ul-white
-    ul 
-        li 
-            &::before
-                background: $white
 .text_white
     table
         td 
             border: 1px solid $white
+    h1, h2, h3, h4, h5, h6
+        color: $white
 .text 
     &_normal
         font-style: normal
@@ -195,43 +206,6 @@ h6
         &100
             font-size: 100px
             line-height: 1.1
-.elem
-    &_animate 
-        transition: 1.4s all
-        &:not(.opacity)
-            transform: rotateX(90deg)
-        &.opacity
-            opacity: 0
-            &.anim 
-                opacity: 1
-        &:not(.opacity)
-            &.anim
-                transform: rotateX(00deg)
-        &.left, &.right, &.top, &.bott
-            transition: 1.4s all
-            opacity: 0
-            &.anim 
-                opacity: 1
-        &.top
-            transform: translate3d(0, 60px, 0)
-            &.anim
-                transform: translate3d(0, 0, 0)
-        &.bott
-            transform: translate3d(0, -60px, 0)
-            &.anim
-                transform: translate3d(0, 0, 0)
-        &.right
-            transform: translate3d(-60px, 0, 0)
-            &.anim
-                transform: translate3d(0, 0, 0)
-        &.left
-            transform: translate3d(60px, 0, 0)
-            &.anim
-                transform: translate3d(0, 0, 0)
-        &.custom 
-            transform: none
-            &.anim 
-                transform: none
 .fancybox__content
     padding: 0 !important
     .framed-video
@@ -313,6 +287,8 @@ h6
     color: $white !important
     transition: 0.4s all
     width: fit-content
+    & > *
+        pointer-events: none
     span 
         position: relative
     img
@@ -351,3 +327,80 @@ h6
         user-select: none
         img
             filter: brightness(0) !important
+.form
+    width: 100%
+    &-head 
+        padding: 32px
+        padding-right: 64px
+        background: $sky100
+    &-body 
+        padding: 32px
+    &-block, &-row, &-label
+        &:last-child
+            margin-bottom: 0 !important
+    &-block 
+        margin-bottom: 32px
+    &-row, &-label 
+        margin-bottom: 24px
+    &-row 
+        display: grid
+        grid-template: auto / 1fr 1fr 
+        gap: 24px
+        .form-label 
+            margin: 0 !important
+    &-label 
+        display: block
+        & > span 
+            display: block
+            margin-bottom: 8px
+        input 
+            width: 100%
+            background: $white
+            border: 1px solid $slate300
+            border-radius: 12px
+            padding: 16px
+            outline-color: $color
+            line-height: 1.5
+    .checkboxes
+        &-item 
+            margin-bottom: 16px
+            &:last-child
+                margin-bottom: 0 !important
+.checkboxes
+    &-item 
+        display: flex
+        align-items: flex-start
+        gap: 8px
+        position: relative
+        cursor: pointer
+        input
+            position: absolute
+            left: 0
+            top: 0
+            pointer-events: none
+            opacity: 0
+            width: 24px
+            height: 24px
+        .box 
+            width: 24px
+            height: 24px
+            min-width: 24px
+            position: relative
+            &::before, &::after
+                content: ''
+                position: absolute
+                left: 0
+                top: 0
+                width: 100%
+                height: 100%
+            &::before
+                background: url('../images/icons/checkbox.svg') center center/contain no-repeat
+            &::after
+                background: url('../images/icons/checkbox-active.svg') center center/contain no-repeat
+                display: none
+        &.active
+            .box 
+                &::before
+                    display: none
+                &::after 
+                    display: block
