--- a/assets/sass/blocks/_catalog.sass
+++ b/assets/sass/blocks/_catalog.sass
@@ -1,4 +1,145 @@
 .catalog
+    &__product
+        &-top
+            max-width: 1143px
+            .article
+                display: block
+                margin-top: 8px
+        &-tabs
+            margin-top: 48px
+            &-content
+                border: 1px solid $slate300
+                border-radius: 12px
+                padding: 24px
+                background: $white
+                max-width: 1138px
+                display: none
+                h1, h2, h3, h4, h5, h6
+                    color: $colorDark
+                &.active
+                    display: block
+            &-names
+                display: flex
+                align-items: center
+                flex-wrap: wrap
+                gap: 20px
+                border-radius: 16px
+                padding: 4px
+                background: $slate50
+                margin-bottom: 32px
+                width: fit-content
+                span
+                    border-radius: 12px
+                    padding: 16px 128px
+                    color: $colorDark
+                    transition: 0.4s all
+                    cursor: pointer
+                    &:hover, &.active
+                        color: $color
+                    &.active
+                        background: $colorLight
+                        color: $white
+        &-order 
+            background: $slate50
+            border-radius: 12px
+            padding: 24px
+            height: fit-content
+            .list
+                margin-top: 32px
+                span 
+                    display: flex
+                    align-items: center
+                    margin-bottom: 16px
+                    gap: 8px
+                    img 
+                        width: 24px
+                        min-width: 24px
+                    &:last-child
+                        margin-bottom: 0 !important
+            .price
+                margin-bottom: 32px
+                display: flex
+                align-items: center
+                gap: 8px
+            .one-click
+                margin-top: 32px
+                width: 100%
+            .btns
+                display: flex
+                align-items: center
+                gap: 8px
+                .counter
+                    display: flex
+                    align-items: center
+                    cursor: default
+                    border-radius: 12px
+                    overflow: hidden
+                    background: $white
+                    border: 1px solid $slate300
+                    .num, .decrease, .increase
+                        height: 56px
+                    .num
+                        min-width: 60px
+                        text-align: center
+                        color: $slate400
+                        padding: 6px
+                        display: flex
+                        align-items: center
+                        justify-content: center
+                    .decrease, .increase
+                        position: relative
+                        width: 60px
+                        min-width: 60px
+                        display: flex
+                        align-items: center
+                        justify-content: center
+                        cursor: pointer
+                        &::before, &::after
+                            content: ''
+                            width: 18px
+                            height: 2px
+                            background: #99a1af
+                            transition: 0.4s background
+                            position: absolute
+                        &::after 
+                            transform: rotate(90deg)
+                        &:hover
+                            &::before, &::after
+                                background: $color
+                    .decrease
+                        &::after 
+                            display: none
+                .btn 
+                    flex: 1
+        &-info 
+            display: grid
+            grid-template: auto / repeat(3, 1fr)
+            gap: 24px
+        &-params 
+            .params
+                margin-top: 16px
+                &-item 
+                    display: flex
+                    gap: 24px
+                    padding: 8px 0px
+                    border-bottom: 1px solid $slate300
+                    span
+                        width: 100%
+                        &:first-child
+                            color: $colorDark
+            .count 
+                display: block
+                margin-top: 24px
+        &-image
+            display: flex
+            align-items: center
+            justify-content: center
+            width: 100%
+            aspect-ratio: 1
+            height: fit-content
+            img
+                width: 100%
+                height: 100%
     &__sub
         &-list 
             display: flex
@@ -91,36 +232,3 @@
                 &-item 
                     width: 100%
                     max-width: 100%
-        &-nav
-            display: flex
-            align-items: center
-            justify-content: center
-            margin-top: 32px
-            gap: 8px
-            .pages
-                display: flex
-                align-items: center
-                justify-content: center
-                flex-wrap: wrap
-            .prev
-                img 
-                    transform: rotate(180deg)
-            a 
-                padding: 8px 12px
-                border-radius: 8px
-                gap: 8px
-                display: flex
-                align-items: center
-                justify-content: center
-                text-align: center
-                transition: 0.4s border
-                border: 1px solid transparent
-                color: $black !important
-                min-width: 40px
-                img 
-                    width: 16px
-                    min-width: 16px
-                &:hover 
-                    border: 1px solid $slate300
-                &.active
-                    border: 1px solid $color
