--- a/assets/sass/blocks/_modals.sass
+++ b/assets/sass/blocks/_modals.sass
@@ -1,6 +1,6 @@
 .modal
     position: fixed
-    z-index: 15
+    z-index: 20
     top: 0
     left: 0
     width: 100%
@@ -8,7 +8,7 @@
     display: flex
     align-items: center
     justify-content: center
-    background: rgba(0, 0, 0, 0.5)
+    background: rgba(49, 65, 88, 0.8)
     transition: 0.5s all
     opacity: 0
     visibility: hidden
@@ -17,17 +17,17 @@
         visibility: visible
     &__close
         position: absolute
-        width: 30px
-        height: 30px
+        width: 24px
+        height: 24px
         display: flex
         align-items: center
         justify-content: center
-        top: -30px
-        right: -30px
+        top: 32px
+        right: 32px
         cursor: pointer
         &::before, &::after
             content: ''
-            background: $white
+            background: $black
             height: 2px
             width: 100%
             position: absolute
@@ -43,9 +43,17 @@
     &__wrap
         max-height: 95vh
         max-width: 95vw
+        width: 1000px
         overflow: auto
+        background: $white
     &__item 
         position: relative
         display: none
+        border-radius: 12px
+        overflow: hidden
         &.active
             display: block
+    &__success
+        .modal
+            &__wrap 
+                width: 500px
