--- a/assets/sass/media/_catalog.sass
+++ b/assets/sass/media/_catalog.sass
@@ -8,11 +8,25 @@
         &__list
             &-items 
                 grid-template: auto / repeat(3, 1fr)
+        &__product
+            &-info 
+                grid-template: auto / 1fr 1fr
+            &-order
+                grid-column: 2 / 3
+                grid-row: 1 / 2
+            &-params 
+                grid-column: 1 / 3
 @media (max-width: 1200px)
     .catalog
         &__list
             &-items 
                 grid-template: auto / 1fr 1fr
+        &__product
+            &-tabs 
+                &-names 
+                    gap: 0
+                    span 
+                        padding: 16px 89px
 @media (max-width: 992px)
     .catalog
         &__list 
@@ -20,8 +34,45 @@
                 margin-bottom: 16px
                 .list 
                     padding: 8px
-            &-nav 
-                margin-top: 16px
+        &__product
+            &-tabs 
+                &-names 
+                    span 
+                        padding: 16px 60px
+            &-order
+                padding: 16px
+                .btns 
+                    .btn 
+                        span
+                            display: none
+@media (max-width: 768px)
+    .catalog
+        &__product
+            &-info 
+                grid-template: auto / 1fr
+            &-order
+                grid-row: 2 / 3
+                grid-column: unset
+                .price
+                    margin-bottom: 16px
+                .one-click
+                    margin-top: 16px
+                .list 
+                    margin-top: 16px
+                    span 
+                        margin-bottom: 8px
+            &-params
+                grid-column: unset
+                .count, .params 
+                    margin-top: 16px
+            &-tabs 
+                margin-top: 24px
+                &-names 
+                    margin-bottom: 16px
+                    span 
+                        padding: 16px 50px
+                &-content 
+                    padding: 16px
 @media (max-width: 650px)
     .catalog
         &__list
@@ -29,17 +80,12 @@
                 grid-template: auto / 1fr
 @media (max-width: 576px)
     .catalog
+        &__product
+            &-tabs 
+                &-names 
+                    span
+                        padding: 8px 14px
         &__list 
             &-sort
                 .list 
                     min-width: 290px
-            &-nav
-                font-size: 12px
-                gap: 0
-                a 
-                    padding: 4px
-                    gap: 0
-                    min-width: 30px
-                    img 
-                        width: 14px
-                        min-width: 14px
