--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -10,6 +10,7 @@
 @import 'blocks/home'
 @import 'blocks/catalog'
 @import 'blocks/404'
+@import 'blocks/states'
 @import 'blocks/footer'
 
 @import 'media/init'
