other pages outside of Figma

--- a/assets/sass/media/_general.sass
+++ b/assets/sass/media/_general.sass
@@ -49,6 +49,9 @@
 @media (max-width: 1400px)
     h6 
         font-size: 14px
+    .btn 
+        &.on-bottom
+            margin: 32px auto 0
     .text
         &_fz 
             &16
@@ -242,6 +245,9 @@
     .container
         padding-left: 15px
         padding-right: 15px
+    .btn 
+        &.on-bottom
+            width: 100%
     .page-wrap
         padding-top: 70px
     .page
