--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -11,6 +11,8 @@
 @import 'blocks/catalog'
 @import 'blocks/404'
 @import 'blocks/states'
+@import 'blocks/clients'
+@import 'blocks/personal'
 @import 'blocks/footer'
 
 @import 'media/init'
