--- a/assets/sass/base/_elements.sass
+++ b/assets/sass/base/_elements.sass
@@ -100,6 +100,7 @@ h6
     img 
         margin-left: auto
         margin-right: auto
+        display: block
     table
         border-collapse: collapse
         width: 100%
@@ -327,6 +328,8 @@ h6
         user-select: none
         img
             filter: brightness(0) !important
+    &.on-bottom
+        margin: 50px auto 0
 .form
     width: 100%
     &-head 
@@ -353,7 +356,7 @@ h6
         & > span 
             display: block
             margin-bottom: 8px
-        input 
+        input, textarea 
             width: 100%
             background: $white
             border: 1px solid $slate300
@@ -361,6 +364,9 @@ h6
             padding: 16px
             outline-color: $color
             line-height: 1.5
+        textarea
+            resize: vertical
+            height: 150px
     .checkboxes
         &-item 
             margin-bottom: 16px
