filter and accord slider@

--- a/assets/sass/base/_elements.sass
+++ b/assets/sass/base/_elements.sass
@@ -288,6 +288,7 @@ h6
     color: $white !important
     transition: 0.4s all
     width: fit-content
+    line-height: 1.5
     & > *
         pointer-events: none
     span 
