--- a/assets/sass/blocks/_catalog.sass
+++ b/assets/sass/blocks/_catalog.sass
@@ -1,4 +1,30 @@
 .catalog
+    &__filter
+        &-wrap
+            border-radius: 24px
+            padding: 24px
+            background: $slate50
+            display: grid
+            grid-template: auto / repeat(3, 1fr)
+            gap: 48px
+            .form-label
+                margin: 0
+            .checkboxes
+                display: flex
+                align-items: flex-start
+                flex-wrap: wrap
+                gap: 12px 24px
+            .input-row
+                display: grid
+                grid-template: auto / 1fr 1fr
+                gap: 8px
+            .btns 
+                display: flex
+                align-items: center
+                gap: 8px
+                margin-top: auto
+                .btn 
+                    width: 100%
     &__product
         &-top
             max-width: 1143px
