--- a/assets/sass/blocks/_home.sass
+++ b/assets/sass/blocks/_home.sass
@@ -271,6 +271,31 @@
                         padding: 24px
                         border: 1px solid $slate300
                         color: $colorDark
+                &__slider
+                    grid-column: 2 / 4
+                    position: relative
+                    .slider
+                        &-arrows 
+                            &-item 
+                                position: absolute
+                                top: 50%
+                                transform: translateY(-50%)
+                                z-index: 1
+                                &.left 
+                                    left: 0
+                                &.right
+                                    right: 0
+                    .slide
+                        margin-right: 8px
+                        border-radius: 12px
+                        border: 1px solid $slate300
+                        aspect-ratio: 0.607
+                        width: calc(calc(100vw -  312px) / 6)
+                        max-width: 268px
+                        background: $white
+                        img 
+                            width: 100%
+                            height: 100%
                 &.active 
                     padding: 24px
                     grid-template-rows: 1fr
