--- a/assets/sass/media/_general.sass
+++ b/assets/sass/media/_general.sass
@@ -137,6 +137,9 @@
                 font-size: 16px
             &40, &48
                 font-size: 24px
+    .select-field
+        &-list 
+            padding: 8px
     .page
         &__block 
             padding-top: 35px
@@ -250,6 +253,9 @@
             width: 100%
     .page-wrap
         padding-top: 70px
+    .select-field
+        &-list
+            min-width: 290px
     .page
         &__block 
             padding-top: 24px
