--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -13,6 +13,7 @@
 @import 'blocks/states'
 @import 'blocks/clients'
 @import 'blocks/personal'
+@import 'blocks/order'
 @import 'blocks/footer'
 
 @import 'media/init'
