--- a/assets/sass/media/_general.sass
+++ b/assets/sass/media/_general.sass
@@ -6,8 +6,6 @@
             &100
                 font-size: 80px
     .header
-        &__cats
-            grid-template: auto / repeat(6, 1fr)
         &__bottom 
             &-btns 
                 flex-direction: column
@@ -40,12 +38,12 @@
                 font-size: 55px
             &100
                 font-size: 65px
+    .cookie
+        width: calc(100% - 100px)
     .header
         &__logo 
             width: 270px
             min-width: 270px
-        &__cats 
-            grid-template: auto / repeat(5, 1fr)
 @media (max-width: 1400px)
     h6 
         font-size: 14px
@@ -106,12 +104,11 @@
                 min-width: 40px
     .header
         &__cats 
-            grid-template: auto / repeat(4, 1fr)
+            display: flex
+            overflow: auto
+            padding-bottom: 8px
             &-item 
-                padding: 12px
-                img 
-                    width: 100px
-                    height: 100px
+                min-width: 141px 
     .footer
         &__bott, &__nav 
             margin-top: 32px
@@ -137,6 +134,8 @@
                 font-size: 16px
             &40, &48
                 font-size: 24px
+    .cookie
+        width: calc(100% - 50px)
     .select-field
         &-list 
             padding: 8px
@@ -171,6 +170,12 @@
 @media (max-width: 768px)
     .page-wrap
         padding-top: 83px
+    .cookie
+        &__top 
+            margin-bottom: 24px
+        &__bott
+            flex-direction: column
+            align-items: flex-start
     .modal
         &__close 
             width: 20px
@@ -224,12 +229,7 @@
                 width: 100vw
                 padding: 16px
         &__cats 
-            grid-template: auto / repeat(3, 1fr)
             margin-top: 16px
-            &-item 
-                img 
-                    width: 80px
-                    height: 80px
         .header
             &__bottom
                 &-info, &-btns 
@@ -248,6 +248,18 @@
     .container
         padding-left: 15px
         padding-right: 15px
+    .cookie
+        padding: 16px
+        width: calc(100% - 30px)
+        &__top 
+            margin-bottom: 16px
+            strong 
+                margin-bottom: 4px
+        &__bott
+            gap: 16px
+            .btns 
+                &, .btn
+                    width: 100%
     .btn 
         &.on-bottom
             width: 100%
@@ -294,13 +306,6 @@
                             width: 100%
                             span 
                                 display: none
-        &__cats 
-            grid-template: auto / 1fr 1fr
-            &-item 
-                font-size: 14px
-                img 
-                    width: 62px
-                    height: 62px
         &__bottom
             padding: 6px 15px
             &-info 
