--- a/assets/sass/blocks/_home.sass
+++ b/assets/sass/blocks/_home.sass
@@ -108,13 +108,21 @@
                     .num, .decrease, .increase
                         height: 40px
                     .num
+                        width: fit-content
                         min-width: 60px
+                        width: 60px
                         text-align: center
                         color: $slate400
                         padding: 6px
                         display: flex
                         align-items: center
                         justify-content: center
+                        background: none
+                        border: none
+                        outline: none
+                        font-size: inherit
+                        line-height: inherit
+                        font-weight: inherit
                     .decrease, .increase
                         position: relative
                         width: 40px
