--- a/assets/sass/blocks/_modals.sass
+++ b/assets/sass/blocks/_modals.sass
@@ -46,6 +46,8 @@
         width: 1000px
         overflow: auto
         background: $white
+        &.small
+            width: 600px
     &__item 
         position: relative
         display: none
