--- a/assets/sass/blocks/_order.sass
+++ b/assets/sass/blocks/_order.sass
@@ -62,6 +62,10 @@
             background: $sky100
             padding: 16px
             gap: 32px
+        &-empty
+            display: none
+            &.active 
+                display: block
         &-btns
             display: flex
             align-items: center
