--- a/assets/sass/media/_home.sass
+++ b/assets/sass/media/_home.sass
@@ -211,6 +211,7 @@
                     .counter
                         .num
                             min-width: 45px
+                            width: 45px
                         .decrease, .increase
                             width: 35px
                             min-width: 35px
