--- a/assets/sass/blocks/_catalog.sass
+++ b/assets/sass/blocks/_catalog.sass
@@ -106,12 +106,19 @@
                         height: 56px
                     .num
                         min-width: 60px
+                        width: 60px
                         text-align: center
                         color: $slate400
                         padding: 6px
                         display: flex
                         align-items: center
                         justify-content: center
+                        background: none
+                        border: none
+                        outline: none
+                        font-size: inherit
+                        line-height: inherit
+                        font-weight: inherit
                     .decrease, .increase
                         position: relative
                         width: 60px
