--- a/assets/sass/blocks/_header.sass
+++ b/assets/sass/blocks/_header.sass
@@ -219,12 +219,32 @@
                 display: flex
                 align-items: center
                 justify-content: center
+                position: relative
+                span 
+                    position: absolute
+                    display: flex
+                    align-items: center
+                    justify-content: center
+                    text-align: center
+                    background: $red
+                    color: $white
+                    font-size: 8px
+                    border-radius: 100%
+                    z-index: 1
+                    width: 20px
+                    height: 20px
+                    top: 8px
+                    right: 8px
+                    transition: 0.3s all
                 img 
                     width: 24px
                     min-width: 24px
                     transition: 0.2s filter
                 &:hover 
                     background: $red
+                    span 
+                        background: $white
+                        color: $red
                     img 
                         filter: brightness(0) invert(1)
         &-search
